--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -20,7 +20,7 @@
 
     <div class="navbar-right">
         <div class="online">
-            <img src="../static/icons/photo.jpg" class="nav-profile-img">
+            <img src="{{ authuser.profile_picture.url }}" class="nav-profile-img">
         </div>
 
     </div>
