--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,7 @@
     <div class="container">
 
         {#---------------------left-sidebar---------------------#}
-        <div class="left-sidebar" style="position: sticky; top: 73px" >
+        <div class="left-sidebar" style="position: sticky; top: 73px">
             <div class="sidebar-profile-box">
                 <img src="{{ authuser.background_picture.url }}" width="100%">
                 <div class="sidebar-profile-info">
@@ -64,10 +64,10 @@
                     <textarea rows="2" placeholder="Write a post"></textarea>
                 </div>
                 <div class="create-post-links">
-                    <li><img src="../static/icons/photo.jpg" alt="">Photo</li>
-                    {# todo #}
-                    <li><img src="../static/icons/photo.jpg" alt="">Video</li>
-                    {# todo #}
+                    <li><img src="../static/icons/icons8-photo-48.png" alt="">Photo</li>
+
+                    <li><img src="../static/icons/icons8-video-48.png" alt="">Video</li>
+
                     <li><img src="../static/icons/photo.jpg" alt="">Event</li>
                     {# todo #}
                     <li>Post</li>
@@ -110,15 +110,16 @@
                             <img src="../static/icons/down-arrow.png" class="post-activity-arrow-icon">
                         </div>
                         <div class="post-activity-link">
-                            <img src="../static/icons/heart(2).png">{# todo #}
+                            <img src="../static/icons/heart(2).png">
                             <span>Like</span>
                         </div>
                         <div class="post-activity-link">
-                            <img src="../static/icons/heart(2).png">{# todo #}
+                            <img src="../static/icons/chat.png">
                             <span>Comment</span>
                         </div>
                         <div class="post-activity-link">
-                            <img src="../static/icons/heart(2).png">{# todo #}
+                            <a href=""> <img src="../static/icons/share.png"> </a>
+
                             <span>Share</span>
                         </div>
                         <div class="post-activity-link">
@@ -133,7 +134,7 @@
 
         </div>
         {#---------------------right-sidebar---------------------#}{# todo #}
-        <div class="right-sidebar"  style="position: sticky; top: 73px">
+        <div class="right-sidebar" style="position: sticky; top: 73px">
 
 
             <div class="sidebar-news">
