--- a/static/css/style.css
+++ b/static/css/style.css
@@ -415,6 +415,7 @@ a {
     padding: 20px 25px 10px;
     display: flex;
     align-items: flex-start;
+
 }
 
 .main-content .create-post .create-post-input img {
@@ -454,6 +455,7 @@ a {
     align-items: center;
     justify-content: center;
     cursor: pointer;
+
 }
 
 .create-post-links li:last-child {
@@ -469,12 +471,14 @@ a {
     width: 30px;
     margin-right: 15px;
 
+
 }
 
 .post {
     background: #fff;
     padding: 20px 25px 5px;
     margin: 5px 0 15px;
+
 }
 
 
@@ -566,3 +570,7 @@ a {
     width: 18px;
     margin-right: 8px;
 }
+
+
+
+/*------------------------login_page______________________________*/
